# pi-pico-rs

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
src/: main.rs
