[package]
name = "pi-pico-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp-pico = "0.2.0"
rp2040-boot2 = { version = "0.2.0", optional = true }
cortex-m-rt = { version = "0.7" }
embedded-time = "0.12.0"
embedded-hal = "0.2.5"
panic-halt= "0.2.0"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
futures = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
cortex-m-rtic = "0.6.0-rc.4"
nb = "1.0"
i2c-pio = { git = "https://github.com/ithinuel/i2c-pio-rs", rev = "df06e4ac94a5b2c985d6a9426dc4cc9be0d535c0" }
heapless = "0.7.9"
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
smart-leds = "0.3.0"
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "4f0d81e594ea9934f9c4c38ed9824ad0cce4ebb5" }
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"

defmt = "0.2.0"
defmt-rtt = "0.2.0"
